<resources>
    <string name="app_name">AstroWeather</string>
    <string name="sun_info">Sun Info</string>
    <string name="moon_info">Moon Info</string>
    <string name="refresh_frequency">Refresh frequency [min]:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="save">Save/Refresh</string>
    <string name="rise_time">Rise Time:</string>
    <string name="set_time">Set Time:</string>
    <string name="rise_azimuth">Rise Azimuth:</string>
    <string name="set_azimuth">Set Azimuth:</string>
    <string name="twilight_morning">Twilight Morning:</string>
    <string name="twilight_evening">Twilight Evening:</string>
    <string name="next_full_moon">Next Full Moon:</string>
    <string name="next_new_moon">Next New Moon:</string>
    <string name="moon_illumination">Moon Illumination:</string>
    <string name="moon_age">Moon Age:</string>
    <string name="initial_frequency">15</string>
    <string name="initial_latitude">51.366699</string>
    <string name="initial_longitude">19.383301</string>
    <string name="initial_city">Bełchatów</string>
    <string name="toast_plain_error">You cannot apply empty string!</string>
    <string name="toast_plain_error_frequency">You cannot apply empty string to frequency!</string>
    <string name="toast_wrong_latitude">You entered wrong latitude!</string>
    <string name="toast_wrong_longitude">You entered wrong longitude!</string>
    <string name="toast_wrong_frequency">You entered wrong frequency!</string>
    <string name="toast_values_refreshed">Values refreshed!</string>
    <string name="toast_wrong_city">Entered city does not exist!</string>
    <string name="toast_wrong_lat_or_lon">Entered latitude or longitude not matches any place!</string>
    <string name="toast_no_internet_connection">No internet connection! Your data can be out of date!</string>
    <string name="toast_locations_not_empty">Location list cannot be empty!</string>
    <string name="city">City:</string>
    <string name="woeid">Woeid:</string>
    <string name="initial_woeid">485813</string>
    <string name="position">Position:</string>
    <string name="unit_position">Unit Position:</string>
    <string name="select_location">Select Location</string>
    <string name="select_place">Select Place:</string>
    <string name="remove">Remove</string>
    <string name="units">Units:</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="condition">Condition:</string>
    <string name="graphical">Graphical:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
    <string name="date">Date:</string>
    <string name="day">Day:</string>
    <string name="highest_temperature">High:</string>
    <string name="lowest_temperature">Low:</string>
    <string name="weather">Weather:</string>
</resources>
