<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/latitude"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_place" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/refresh_frequency" />

        <EditText
            android:id="@+id/refresh_frequency"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/initial_frequency" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/remove" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/timer"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/units" />

        <Spinner
            android:id="@+id/unitsSpinner"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/unitsSpinner"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/pager_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="2dp"
            android:paddingBottom="2dp" />

    </android.support.v4.view.ViewPager>
</LinearLayout>